--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -20,8 +20,6 @@
      <div class="line"></div>
    </div>
  </div> -->
-<!-- COVER -->
-
 
 
 <!-- COVER -->
@@ -400,6 +398,7 @@
       <div class="text">
          <p class="price-headingp">priser</p>
          <h1>Profesjonelle nettsider, rett foran deg</h1>
+         <p class="prices-longp">Klikk under for å se de forskjellige prisene</p>
       </div>
       <div class="choose-type-of-product-flex" id="chooseTypeOfProductFlex">
          <p id="eco" onclick="ecoShowFunc()">Nettbutikk</p>
