--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -40,16 +40,16 @@
                         <a onclick="help()" id="helpToggle">Kundeservice<i class="fas fa-sort-down"></i></a>
                         <div class="help-dropdown-links" id="helpDropdown">
                             <div class="nav-link-parent">
-                                <a href="/prossesen-av-bestillinger">Prossesen av bestillinger</a>
+                                <a href="/prosessen-av-bestillinger">Prossesen av bestillinger</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a href="/forum">Forum</a>
+                                <a href="/webiser-forum">Forum</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a href="/spørr-om-endringer">Spørr om redigeringer på nettsiden</a>
+                                <a href="/sporr-om-endringer">Spørr om redigeringer på nettsiden</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a href="/de-tre-frontend-språkene">Programering språkene</a>
+                                <a href="/progammering-spraakene">Programering språkene</a>
                             </div>
                         </div>
                     </div>
@@ -57,10 +57,10 @@
                         <a onclick="about()" id="aboutToggle">Hvem vi er<i class="fas fa-sort-down"></i></a>
                         <div class="about-dropdown-links" id="aboutDropdown">
                             <div class="nav-link-parent">
-                                <a href="">Om oss</a>
+                                <a href="/om-webiser">Om oss</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a href="">Blogg</a>
+                                <a href="/blogg">Blogg</a>
                             </div>
                             <div class="nav-link-parent">
                                 <a href="">Sosiale medier</a>
