--- a/apps/core/templates/pages/kundeservice/forum.html
+++ b/apps/core/templates/pages/kundeservice/forum.html
@@ -4,5 +4,18 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/pages/kundeservice/forum.css' %}" type="text/css">
 
-    <div class="forum"></div>
+<!-- COVER -->
+<div class="cover" id="cover">
+    <!-- ALL COVER CONENT -->
+    <div class="content">
+       <!-- COVER SECTION 1 -->
+       <div class="cover-section1">
+          <!-- ALL COVER TEXT -->
+          <div class="text">
+             <h1 class="cover-h1">Forum</h1>
+             <p class="cover-p">Les hva andre kunder har å si</p>
+          </div>
+       </div>
+    </div>
+ </div>
 {% endblock %}
