--- a/apps/core/templates/pages/kundeservice/proccess.html
+++ b/apps/core/templates/pages/kundeservice/proccess.html
@@ -6,35 +6,23 @@
 
 <!-- COVER -->
 <div class="cover" id="cover">
-    <div class="content" id="coverContent">
-       <div class="text">
-          <h1><span class="moderne">Prossesen</span> <br>av<br> <div class="background-overlay"></div> <span class="lave priser">bestillinger</span></h1>
-       </div>
-    </div>
- </div>
- <br>
- <br>
- <!-- PROCCESS -->
-<div class="proccess">
-    <h1>Du vil mota en epost innen 30 min etter vi har motat bestillingen, og designen blir satt i gang med en gang du har bekreftet bestillingen</h1>
-    <img src="{% static '/images/other/loading-bar-1.png' %}" alt="proccess-1">
-    <br>
-    <br>
-    <h1>Bestillingen er bekreftet! Med engang bestillingen er bekreftet, skal designen bli satt i gang</h1>
-    <img src="{% static '/images/other/loading-bar-2.png' %}" alt="proccess-2">
-    <br>
-    <br>
-    <h1>Designen er ferdig laget, og du har bekreftet den. Nå vil designen bli sendt over til våres utviklere</h1>
-    <img src="{% static '/images/other/loading-bar-3.png' %}" alt="proccess-3">
-    <br>
-    <br>
-    <h1>Nettsiden er ferdig utvikla. Når nettsiden har blitt ferdig bygget, så vil du mota en mail sånn at du kan bekrefte at nettsiden ser akkuratt som du vil</h1>
-    <img src="{% static '/images/other/loading-bar-4.png' %}" alt="proccess-4">
-    <br>
-    <br>
-    <h1>Alt har bliir fullført! Du vil mota nettsiden innen 3 dager, avhengig bestillingen din</h1>
-    <img src="{% static '/images/other/loading-bar-5.png' %}" alt="proccess-5">
-    <br>
-    <br>
+   <!-- ALL COVER CONENT -->
+   <div class="content">
+      <!-- COVER SECTION 1 -->
+      <div class="cover-section1">
+         <!-- ALL COVER TEXT -->
+         <div class="text">
+            <h1 class="cover-h1">Prosessen Av Bestillinger</h1>
+            <p class="cover-p">Veldig enkelt og raskt</p>
+         </div>
+      </div>
+      <!-- COVER SECTION 2 -->
+      <div class="cover-section2">
+         <!-- COVER BOTTOM IMAGE -->
+         <div class="cover-image-div">
+            <img class="cover-image" src="{% static '/images/covers/proccess-cover.png' %}" alt="image proccess cover web design webiser">
+         </div>
+      </div>
+   </div>
 </div>
 {% endblock %}
