--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -160,7 +160,7 @@ body.menu {
 }
 
 .cover .content .cover-actions a:nth-child(1) {
-  background: #072546;
+  background: #0078da;
 }
 
 .cover .content .cover-actions a:nth-child(3) {
