--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -125,7 +125,7 @@ body{
           transform: translateX(18px) translateY(2px);
         }
         &:nth-child(1){
-          background: rgb(7, 37, 70);
+          background: #0078da;
         }
         &:nth-child(3){
           border: 2px solid rgb(11, 46, 87);
