--- a/static/scss/pages/kundeservice/forum.css
+++ b/static/scss/pages/kundeservice/forum.css
@@ -1,7 +1,4 @@
-.forum {
-  position: relative;
-  width: 100%;
-  height: 900px;
-  background: #8fa9ff;
+.cover {
+  height: 300px;
 }
 /*# sourceMappingURL=forum.css.map */
