--- a/static/scss/pages/kundeservice/frontend.css
+++ b/static/scss/pages/kundeservice/frontend.css
@@ -1,7 +1,4 @@
-.frontend {
-  position: relative;
-  width: 100%;
-  height: 900px;
-  background: #8fa9ff;
+.cover {
+  height: 340px;
 }
 /*# sourceMappingURL=frontend.css.map */
