--- a/static/scss/pages/kundeservice/frontend.scss
+++ b/static/scss/pages/kundeservice/frontend.scss
@@ -1,7 +1,4 @@
 // STANDARD PHONE
-.frontend{
-    position: relative;
-    width: 100%;
-    height: 900px;
-    background: #8fa9ff;
-}
+.cover{
+    height: 340px;
+  }
