--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -21,7 +21,7 @@ $txt: #183b56;
   .content{
     padding-inline: 25px;
     padding-top: 110px;
-    padding-bottom: 45px;
+    padding-bottom: 35px;
     height: max-content;
     opacity: 0;
     transform: translateY(150px);
@@ -34,7 +34,7 @@ $txt: #183b56;
       text-align: center;
       .cover-heading{
         color: $white;
-        font-size: 27px;
+        font-size: 28px;
         margin-bottom: 15px;
       }
       .paragraph{
@@ -56,7 +56,7 @@ $txt: #183b56;
         top: 43px;
         padding: 7px;
         margin: -7px;
-        background: rgba(140, 140, 140, 0.2);
+        background: rgba(155, 155, 155, 0.22);
         border-radius: 100%;
       }
       input{
@@ -79,11 +79,12 @@ $txt: #183b56;
         color: $white;
         text-align: center;
         width: 100%;
-        height: 50px;
+        height: 45px;
         margin-top: 15px;
         border-radius: 4px;
         outline: none;
         border: none;
+        font-weight: normal;
       }
     }
   }
