--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -75,6 +75,7 @@ $txt: #183b56;
         }
       }
       button{
+        font-size: 14.5px;
         background: $primBtn;
         color: $white;
         text-align: center;
