--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -76,7 +76,7 @@ $txt: #183b56;
       }
       button{
         font-size: 14.5px;
-        background: $primBtn;
+        background: red    ;
         color: $white;
         text-align: center;
         width: 100%;
