--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -19,7 +19,7 @@
 .mobile-cover .content {
   padding-inline: 25px;
   padding-top: 110px;
-  padding-bottom: 45px;
+  padding-bottom: 35px;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
@@ -34,7 +34,7 @@
 }
 .mobile-cover .content .text .cover-heading {
   color: rgb(246, 246, 246);
-  font-size: 27px;
+  font-size: 28px;
   margin-bottom: 15px;
 }
 .mobile-cover .content .text .paragraph {
@@ -56,7 +56,7 @@
   top: 43px;
   padding: 7px;
   margin: -7px;
-  background: rgba(140, 140, 140, 0.2);
+  background: rgba(155, 155, 155, 0.22);
   border-radius: 100%;
 }
 .mobile-cover .content .cover-search input {
@@ -83,15 +83,17 @@
   opacity: 0.8;
 }
 .mobile-cover .content .cover-search button {
-  background: #06c484;
+  font-size: 14.5px;
+  background: red;
   color: rgb(246, 246, 246);
   text-align: center;
   width: 100%;
-  height: 50px;
+  height: 45px;
   margin-top: 15px;
   border-radius: 4px;
   outline: none;
   border: none;
+  font-weight: normal;
 }
 
 .services {
