--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -21,7 +21,7 @@
          <div class="text">
             <h1 class="cover-heading">Finn den tjenesten du trenger i Lillehammer</h1>
             <p class="paragraph">
-               Enkel og grei løsning til å finne de tjenestene du trenger
+               Enkel og grei løsning til å finne de tjenestene du trenger, på noen få klikk
             </p>
          </div>
          <div class="cover-search">
