--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -13,7 +13,7 @@ $txt: #183b56;
 html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
-  background: $white !important;
+  background:  rgb(249,249,249) !important;
 }
 // global divs
 button{
