--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -32,14 +32,13 @@
         <div class="footer-links">
             <a href="/vilkaar-og-betingelser">Vilkår & betingelser<i class="fa-solid fa-caret-right"></i></a>
             <a href="/policy">Policy<i class="fa-solid fa-caret-right"></i></a>
-            <a href="/tilbakebetalinger">Tilbakebetaling<i class="fa-solid fa-caret-right"></i></a>
         </div>
         <hr style="background: rgba(255, 255, 255, 0.664);">
         <!-- footer bottom -->
         <div class="footerbottom">
             <!-- copyright -->
             <div class="copyright">
-                <p>Copyright &#169; 2022 Webiser</p>
+                <p> &#169; Lillehammer Tjenester</p>
             </div>
             <!-- social icons -->
             <div class="social-icons">
