--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -17,7 +17,7 @@
 
 
 <div id="mobileNav">
-    <img src="{% static 'images/other/nav-hamburger.png' %}" alt="" class="nav-hamburger-img"> 
+    <!-- <img src="{% static 'images/other/nav-hamburger.png' %}" alt="" class="nav-hamburger-img">  -->
     <!-- LOGO -->
     <div class="logo" id="logo" onclick="window.location.href='/'">
         <h1>Lillehammer<span>Tjenester</span></h1>
