--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -9,7 +9,7 @@ $txt: #183b56;
     height: 100%;
     padding-block: 8px;
     position: relative;
-    background: rgb(240,240,240);
+    background: white;
     .footer-links{
         width: 100%;
         padding-inline: 20px;
