--- a/apps/core/templates/popup/cookie.html
+++ b/apps/core/templates/popup/cookie.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 
 <link rel="stylesheet" href="{% static '/scss/parts/popup/popup.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
@@ -21,4 +21,4 @@
         </div>
     </div>
     <div class="black-overlay" id="blackOverlay"></div>
-    
+     -->
