--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -4,6 +4,7 @@
   height: -moz-max-content;
   height: max-content;
   position: relative;
+  padding-bottom: 40px;
 }
 .mobile-cover .cover-img-lillehammer {
   position: absolute;
@@ -17,7 +18,7 @@
 }
 .mobile-cover .content {
   padding-inline: 25px;
-  padding-top: 120px;
+  padding-top: 110px;
   padding-bottom: 45px;
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -32,21 +33,20 @@
   text-align: center;
 }
 .mobile-cover .content .text .cover-heading {
-  color: #1F1F1F;
-  font-size: 28px;
+  color: rgb(246, 246, 246);
+  font-size: 27px;
   margin-bottom: 15px;
-  font-weight: bold;
 }
 .mobile-cover .content .text .paragraph {
   margin-top: 0;
-  color: #1F1F1F;
+  color: rgb(246, 246, 246);
   font-size: 16.5px;
 }
 .mobile-cover .content .cover-search {
   position: relative;
-  margin-top: 30px;
+  margin-top: 35px;
   padding: 25px 15px;
-  background: rgba(155, 155, 155, 0.2);
+  background: rgba(185, 185, 185, 0.15);
 }
 .mobile-cover .content .cover-search i {
   position: absolute;
@@ -56,7 +56,7 @@
   top: 43px;
   padding: 7px;
   margin: -7px;
-  background: rgba(160, 160, 160, 0.2);
+  background: rgba(140, 140, 140, 0.2);
   border-radius: 100%;
 }
 .mobile-cover .content .cover-search input {
@@ -66,21 +66,21 @@
   outline: none;
   padding: 7px 17px;
   background: rgb(246, 246, 246);
-  color: #1F1F1F;
+  color: #183b56;
   border-radius: 4px;
   font-size: 15px;
 }
 .mobile-cover .content .cover-search input::-moz-placeholder {
   color: #183b56;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .mobile-cover .content .cover-search input:-ms-input-placeholder {
   color: #183b56;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .mobile-cover .content .cover-search input::placeholder {
   color: #183b56;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .mobile-cover .content .cover-search button {
   background: #06c484;
@@ -108,23 +108,30 @@
   margin-top: 20px;
   display: flex;
   overflow-x: scroll;
-  padding-bottom: 15px;
+  padding-bottom: 30px;
 }
 .services .content .services-cards::-webkit-scrollbar {
   height: 3px;
 }
 .services .content .services-cards::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: rgba(180, 180, 180, 0.25);
+  background-color: rgba(190, 190, 190, 0.2);
 }
 .services .content .services-cards .service {
-  min-width: 195px;
-  max-width: 195px;
-  height: 270px;
-  background: rgba(128, 128, 128, 0.055);
+  min-width: 220px;
+  max-width: 220px;
+  height: 285px;
   margin: 0 25px;
-  padding: 8px;
+  padding: 7px;
   position: relative;
+  background: white;
+}
+.services .content .services-cards .service .service-image {
+  width: 100%;
+  height: 95px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(90%);
 }
 .services .content .services-cards .service .name {
   font-size: 18px;
@@ -132,15 +139,15 @@
   margin-bottom: 3px;
 }
 .services .content .services-cards .service .address {
-  font-size: 14px;
+  font-size: 13px;
   color: #183b56;
-  opacity: 0.7;
+  opacity: 0.68;
 }
 .services .content .services-cards .service .short-des {
   margin-top: 8px;
   color: #183b56;
-  font-size: 16px;
-  opacity: 0.95;
+  font-size: 15px;
+  opacity: 0.9;
 }
 .services .content .services-cards .service button {
   margin-top: 15px;
@@ -149,10 +156,13 @@
   border: none;
   text-align: center;
   border-radius: 4px;
-}
-.services .content .services-cards .service button i {
-  color: #06c484;
-  transform: translateX(10px) translateY(2px);
+  background: transparent;
+  width: 95%;
+  background: rgba(190, 190, 190, 0.2);
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .services .content .services-cards .service button:hover {
   filter: brightness(100%);
