--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -3,7 +3,7 @@
   height: 100%;
   padding-block: 8px;
   position: relative;
-  background: rgb(240, 240, 240);
+  background: white;
 }
 #footer .footer-links {
   width: 100%;
