--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -57,6 +57,15 @@
 #mobileNav.menu {
   background: rgb(246, 246, 246);
 }
+#mobileNav.menu .logo h1 {
+  color: #1F1F1F;
+}
+#mobileNav.menu .logo h1 span {
+  border-bottom: 1px solid #06c484;
+}
+#mobileNav.menu .hamburger span {
+  background: #183b56;
+}
 #mobileNav .nav-hamburger-img {
   position: absolute;
   right: 0;
@@ -75,11 +84,11 @@
 }
 #mobileNav .logo h1 {
   font-size: 22px;
-  color: #1F1F1F;
+  color: rgb(246, 246, 246);
   font-family: "Gamja Flower", cursive;
 }
 #mobileNav .logo h1 span {
-  border-bottom: 1px solid #06c484;
+  border-bottom: 1px solid rgb(246, 246, 246);
   margin-left: 4px;
   padding-bottom: 3px;
   font-size: 15px;
@@ -97,7 +106,7 @@
 #mobileNav .hamburger span {
   height: 2px;
   width: 26px;
-  background: #183b56;
+  background: rgb(246, 246, 246);
   border-radius: 3px;
   display: block;
   transition: 0.2s;
