--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -20,7 +20,8 @@
     <!-- <img src="{% static 'images/other/nav-hamburger.png' %}" alt="" class="nav-hamburger-img">  -->
     <!-- LOGO -->
     <div class="logo" id="logo" onclick="window.location.href='/'">
-        <h1>Lillehammer<span>Tjenester</span></h1>
+        <img class="logo1" src="{% static '/images/logo/logo-white.png' %}" alt="logo1">
+        <img class="logo2" src="{% static '/images/logo/logo-black.png' %}" alt="logo2">
     </div>
     <!-- HAMBURGER -->
     <div class="hamburger" id="hamburger" onclick="menu()">
