--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -102,6 +102,7 @@
 }
 .services .content {
   padding: 35px 25px;
+  padding-bottom: 25px;
 }
 .services .content .text {
   text-align: left;
@@ -114,35 +115,59 @@
 }
 .services .content .services-cards::-webkit-scrollbar {
   height: 3px;
+  display: none;
 }
 .services .content .services-cards::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: rgba(190, 190, 190, 0.2);
+  background-color: rgba(130, 130, 130, 0.2);
 }
 .services .content .services-cards .service {
-  min-width: 220px;
-  max-width: 220px;
-  height: 285px;
+  min-width: 190px;
+  max-width: 190px;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
   margin: 0 25px;
-  padding: 7px;
+  padding: 0;
   position: relative;
 }
 .services .content .services-cards .service .service-image {
   width: 100%;
-  height: 95px;
+  height: 105px;
   -o-object-fit: cover;
      object-fit: cover;
   filter: brightness(90%);
+  border-radius: 4px;
+}
+.services .content .services-cards .service .reviews {
+  display: flex;
+  margin-block: 3px;
+}
+.services .content .services-cards .service .reviews p {
+  margin-bottom: 0;
+  color: #FFBC55;
+  font-size: 12px;
+  margin-top: 1px;
+}
+.services .content .services-cards .service .reviews p i {
+  transform: translateY(-0.9px);
+  margin-right: 3px;
+  font-size: 11px;
+}
+.services .content .services-cards .service .reviews span {
+  color: rgb(170, 170, 170);
+  font-size: 11px;
+  transform: translateX(4px) translateY(2px);
 }
 .services .content .services-cards .service .name {
-  font-size: 18px;
+  font-size: 16px;
   color: #183b56;
   margin-bottom: 3px;
 }
-.services .content .services-cards .service .address {
-  font-size: 13px;
+.services .content .services-cards .service .business-name {
+  font-size: 12px;
   color: #183b56;
-  opacity: 0.68;
+  opacity: 0.7;
 }
 .services .content .services-cards .service .short-des {
   margin-top: 8px;
@@ -164,10 +189,24 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+  display: none;
 }
 .services .content .services-cards .service button:hover {
   filter: brightness(100%);
 }
 .services .content .services-cards .service:first-child {
   margin-left: 0;
+}
+
+.categories {
+  width: 100%;
+  height: auto;
+}
+.categories .content {
+  padding: 0 25px;
+  padding-top: 5px;
+  padding-bottom: 20px;
+}
+.categories .content .text {
+  text-align: left;
 }/*# sourceMappingURL=base.css.map */
