--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -97,6 +97,7 @@ $txt: #183b56;
   height: auto;
   .content{
     padding: 35px 25px;
+    padding-bottom: 25px;
     .text{
       text-align: left;
     }
@@ -107,33 +108,55 @@ $txt: #183b56;
       padding-bottom: 30px;
       &::-webkit-scrollbar{
           height: 3px;
+          display: none;
       }
       &::-webkit-scrollbar-thumb{
           border-radius: 10px;
-          background-color: rgba(190, 190, 190, 0.2);
+          background-color: rgba(130, 130, 130, 0.2);
       }
       .service{
-        min-width: 220px;
-        max-width: 220px;
-        height: 285px;
+        min-width: 190px;
+        max-width: 190px;
+        height: min-content;
         margin: 0 25px;
-        padding: 7px;
+        padding: 0;
         position: relative;
         .service-image{
           width: 100%;
-          height: 95px;
+          height: 105px;
           object-fit: cover;
           filter: brightness(90%);
+          border-radius: 4px
+        }
+        .reviews{
+          display: flex;
+          margin-block: 3px;
+          p{
+            margin-bottom: 0;
+            color: #FFBC55;
+            font-size: 12px;
+            margin-top: 1px;
+            i{
+              transform: translateY(-0.9px);
+              margin-right: 3px;
+              font-size: 11px;
+            }
+          }
+          span{
+            color: rgb(170, 170, 170);
+            font-size: 11px;
+            transform: translateX(4px) translateY(2px);
+          }
         }
         .name{
-          font-size: 18px;
+          font-size: 16px;
           color: $txt;
           margin-bottom: 3px;
         }
-        .address{
-          font-size: 13px;
+        .business-name{
+          font-size: 12px;
           color: $txt;
-          opacity: 0.68;
+          opacity: 0.7;
         }
         .short-des{
           margin-top: 8px;
@@ -155,6 +178,7 @@ $txt: #183b56;
           bottom: 0;
           left: 50%;
           transform: translateX(-50%);
+          display: none;
           &:hover{
             filter: brightness(100%);
           }
@@ -163,6 +187,20 @@ $txt: #183b56;
           margin-left: 0;
         }
       }
+    }
+  }
+}
+
+// Categories
+.categories{
+  width: 100%;
+  height: auto;
+  .content{
+    padding: 0 25px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+    .text{
+      text-align: left;
     }
   }
 }
