--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -28,7 +28,7 @@ $txt: #183b56;
         position: absolute;
         left: 0;
         top: -60px;
-        background: $white;
+        background: white;
         width: 100%;
         height: 100%;
         opacity: 0;
@@ -52,12 +52,12 @@ $txt: #183b56;
             opacity: 0;
         }
         .logo{
-            h1{
-                color: $black;
-                span{
-                    border-bottom: 1px solid $primBtn;
-                }
-            }
+          .logo1{
+            display: none;
+          }
+          .logo2{
+            display: block;
+          }
         }
         .hamburger{
             span{
@@ -67,14 +67,14 @@ $txt: #183b56;
     }
     // NAVBAR MENU
     &.menu{
-      background: $white;
+      background: white;
       .logo{
-        h1{
-            color: $black;
-            span{
-                border-bottom: 1px solid $primBtn;
-            }
-        }
+        .logo1{
+            display: none;
+          }
+          .logo2{
+            display: block;
+          }
     }
     .hamburger{
         span{
@@ -99,18 +99,17 @@ $txt: #183b56;
         width: auto;
         height: auto;
         z-index: 1000;
-        h1{
-            font-size: 22px;
-            color: $white;
-            font-family: 'Gamja Flower', cursive;
-            span{
-                border-bottom: 1px solid $white;
-                margin-left: 4px;
-                padding-bottom: 3px;
-                font-size: 15px;
-                font-family: 'Gamja Flower', cursive;
-            }
+      img{
+        width: 105px;
+        height: auto;
+        transition: .3s;
+        &:hover{
+            transform: scale(1.05);
         }
+      }
+      .logo2{
+        display: none;
+      }
     }
     // // // MENU CSS
     // HAMBURGER CSS
@@ -123,7 +122,7 @@ $txt: #183b56;
         text-align: center;
         transform: translateY(2px);
         span{
-            height: 2px;
+            height: 3px;
             width: 26px;
             background: $white;
             border-radius: 3px;
@@ -154,7 +153,7 @@ $txt: #183b56;
     }
     // SIDEBAR
     .sidebar{
-        background: $white;
+        background: white;
         height: 100vh;
         position: absolute;
         top: 68px;
