--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -36,6 +36,7 @@
   color: rgb(246, 246, 246);
   font-size: 28px;
   margin-bottom: 15px;
+  font-weight: 800;
 }
 .mobile-cover .content .text .paragraph {
   margin-top: 0;
