--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -36,6 +36,7 @@ $txt: #183b56;
         color: $white;
         font-size: 28px;
         margin-bottom: 15px;
+        font-weight: 800;
       }
       .paragraph{
         margin-top: 0;
