--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800;900&display=swap');
+
 $black: #1F1F1F;
 $white: rgb(246,246,246);
 $primBtn: #06c484;
@@ -7,7 +9,7 @@ $txt: #183b56;
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Alata', sans-serif;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 html, body {
