--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -6,8 +6,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
-    <title>{% block title %}Webiser | Moderne nettsider til lave priser{% endblock %}</title>
+    <title>Lillehammer Tjenester | Enkelt og grei løsning</title>
     <base href="/">
+    <meta name="theme-color" value="#ffff">
     <link rel="stylesheet" href="{% static '/scss/global/global.css' %}" type="text/css">
     <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
