--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -32,17 +32,16 @@
     <!-- SIDEBAR -->
     <div class="sidebar" id="sidebar">
         <a href="">Om oss</a>
-        <a href="">Bli medlem</a>
-        <a href="">Tjenester</a>
-        <a href="">Kontakt</a>
+        <a href="">Alle tjenester</a>
+        <a href="">Kundeservice</a>
         <a class="nav_order_btn" href="">For bedrifter</a>
         &nbsp;
         <hr style="background: rgba(150,150,150,0.05);">
 
         <p class="sidebar-divider">Finn oss her</p>
 
-        <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
 
         <hr style="background: rgba(150,150,150,0.05);">
 
